@@ -79,3 +79,4 @@
 [0110/113101.499:ERROR:crash_report_database_win.cc(469)] failed to stat report
 [0110/131724.299:ERROR:crash_report_database_win.cc(469)] failed to stat report
 [0110/145135.689:ERROR:crash_report_database_win.cc(469)] failed to stat report
+[0111/162821.328:ERROR:crash_report_database_win.cc(469)] failed to stat report
