@@ -1,0 +1,14 @@
+import React from "react";
+
+class NotFound extends React.Component {
+  render() {
+    return (
+      <h2>
+        404 Error. Page not found! Please click the logo to return to the
+        homepage!
+      </h2>
+    );
+  }
+}
+
+export default NotFound;
